--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@google/generative-ai": "^0.24.1",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
