--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 PORT=5000
-MONGO_URL=mongodb://127.0.0.1:27017/social_world
-CLIENT_URL=http://localhost:3000
-JWT_SECRET= satyayadav
+MONGO_URL=mongodb+srv://satyayadav:s7503625483@cluster0.09tbmjg.mongodb.net/social_world?retryWrites=true&w=majority
+
+JWT_SECRET=jaibabaki
+
 
