--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.9.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "serverless-http": "^3.2.0"
   }
 }
